@@ -9,7 +9,6 @@
 #Allow paging=false # Allow TM to push the process into swap file under certain circumstances
 #Affinity = 15 # Core bitmask, 0 to 2^cores-1 (e.g. 15 on quad, 63 on hex, 255 on octo), -1 ignores
 #Affinity strategy = 1 # 0 ignored, 1 = forced, 2 = limit [default]
-#Affinity ideal = 1 # Ideal core for the app to run. Experimental.
 #IO priority = 2 # I/O priority, 0 = background, 1 = low, 2 = normal [default] ... DON'T TOUCH IF YOU DON'T UNDERSTAND IT
 #Power plan = High Performance # power saver, balanced, high performance
 #Modify delay = 5000 # milliseconds to wait before applying modifications, giving the app some time to boot up before we mess with it
