@@ -68,7 +68,6 @@ namespace Taskmaster
 				public const string PriorityStrategy = Priority + " strategy";
 				public const string Affinity = "Affinity";
 				public const string AffinityStrategy = Affinity + " strategy";
-				public const string AffinityIdeal = Affinity + " ideal";
 
 				public const string Restart = "Restart";
 				public const string Exit = "Exit";
